@@ -1,5 +1,6 @@
 SUBDIRS =		\
 	actions		\
+	animations	\
 	apps		\
 	categories	\
 	devices		\
