@@ -76,6 +76,7 @@ scalable/Makefile
 16x16/stock/table/Makefile
 16x16/stock/text/Makefile
 24x24/actions/Makefile
+24x24/animations/Makefile
 24x24/apps/Makefile
 24x24/categories/Makefile
 24x24/devices/Makefile
@@ -100,6 +101,7 @@ scalable/Makefile
 24x24/stock/table/Makefile
 24x24/stock/text/Makefile
 48x48/actions/Makefile
+48x48/animations/Makefile
 48x48/apps/Makefile
 48x48/categories/Makefile
 48x48/devices/Makefile
