@@ -1,3 +1,12 @@
+2006-02-06  Rodney Dawes  <dobey@novell.com>
+
+	* configure.in:
+	* 24x24/Makefile.am:
+	* 48x48/Makefile.am:
+	* 24x24/animations/Makefile.am:
+	* 48x48/animations/Makefile.am:
+	Update for the new 24px and 48px size animation sequences
+
 2006-02-06  Jakub Steiner <jimmac@ximian.com>
 
 	* process-working: use a gradinet to better work on grey gtk
